# spirit-rules-config-demo

./: .gitignore  AI_DEV_KIT.md  DEPLOYMENT.md  app.py  app.yaml  databricks.yml  pyproject.toml  query_db.py  requirements.txt
docs/plans/: 2026-02-20-rules-config-design.md  2026-02-20-rules-config-implementation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: ActionBar.tsx  AuditLog.tsx  CloneConfirmDialog.tsx  FilterBar.tsx  HeaderDetailCard.tsx  ImportDialog.tsx  LinesTable.tsx  NewRuleDialog.tsx  RuleDetail.tsx  RuleHeaderCard.tsx  RuleHeaderList.tsx  StatusBadge.tsx
frontend/src/store/: rulesStore.ts
resources/: app.yml  lakebase.yml  setup_job.yml
scripts/: setup_lakebase.py
server/: config.py  db.py  mock_data.py  models.py  schema.sql
server/routes/: lines.py  rules.py
setup/: init_lakebase.py
